Name:                euler
Version:             0.0.1
Synopsis:            Solutions to Project Euler in Haskell
Description:         Solutions to Project Euler in Haskell
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI

Source-repository head
  type: git
  location: git://github.com/jwiegley/euler.git

test-suite doctests
  default-language: Haskell98
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  ghc-options: -O -Wall -Werror
  build-depends:
      base == 4.*
    , directory >= 1.0 && < 1.3
    , doctest   >= 0.8 && <= 0.10
    , filepath  >= 1.3 && < 1.4

Library
  default-language: Haskell98
  Build-depends: base            >= 4 && < 5
               , array           >= 0.4.0.1
  exposed-modules:
    Euler001
    Euler002
    Euler003
