Name:                euler
Version:             1.0.0
Synopsis:            Solutions to Project Euler in Haskell
Description:         Solutions to Project Euler in Haskell
License-file:        doc/LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI

Source-repository head
  type: git
  location: git://github.com/jwiegley/euler.git

test-suite doctests
  default-language: Haskell98
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  build-depends:
      base == 4.*
    , directory >= 1.0 && < 1.3
    , doctest   >= 0.8 && <= 0.10
    , filepath  >= 1.3 && < 1.4

Library
  default-language: Haskell98
  Build-depends: base            >= 4 && < 5
               , vector          >= 0.10.0.1
               , parallel        >= 3.2.0.3
               , integer-gmp
  exposed-modules:
    Euler001
    Euler002
    Euler003
    Euler004
    Euler005
    Euler006
    Euler007
    Euler008
    Euler009
    Euler010
    Euler011
    Euler012
    Euler013
    Euler014
    Euler015
    Euler016
    Euler020
